crates/edifact-rs-derive/tests/ui/fail_composite_on_message.stderr
error: field `rff`: #[edifact(composite)] is only valid on segment structs
  --> tests/ui/fail_composite_on_message.rs:27:15
   |
27 |     #[edifact(composite)]
   |               ^^^^^^^^^
